# training-dashboard

./: .gitignore  LICENSE  README.md  api.py  pyproject.toml  run_ablation.py
.github/workflows/: tests.yml
reports/: ablation_lr.json
src/dashboard/: __init__.py  data.py  experiment.py  model.py
tests/: test_api.py  test_dashboard.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
